--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <title>Trillo &mdash; Your all-in-one hotel booking app</title>
     </head>
     <body>
-        
+        <h1 class="">Hello World!</h1>
     </body>
 </html>
