--- a/index.html
+++ b/index.html
@@ -47,19 +47,129 @@
                         <span class="user-nav__username">Jay</span>
                     </div>
                 </nav>
-
             </header>
             
             <!-- content -->
             <div class="content">
                 <!-- sidebar -->
                 <nav class="sidebar">
-                    Navigation
+                    <ul class="side-nav">
+                        <li class="side-nav__item side-nav__item--active">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href='img/sprite.svg#icon-home'></use>
+                                </svg>
+                                <span>Hotel</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href='img/sprite.svg#icon-aircraft-take-off'></use>
+                                </svg>
+                                <span>Flight</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href='img/sprite.svg#icon-key'></use>
+                                </svg>
+                                <span>Car Rental</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href='img/sprite.svg#icon-map'></use>
+                                </svg>
+                                <span>Tours</span>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="legal">
+                        &copy; 2019 by <a href="https://github.com/jayli3" class="jayli3">Jay Li</a>. View source code on my <a href="https://github.com/jayli3/trillo-front-end" class="jayli3">GitHub</a> page.
+                    </div>
                 </nav>
 
                 <!-- hotel-view -->
                 <main class="hotel-view">
-                    Hotel View
+                    <div class="gallery">
+                        <figure class="gallery__item">
+                            <img src="img/hotel-1.jpg" alt="photo of hotel 1" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="img/hotel-2.jpg" alt="photo of hotel 2" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="img/hotel-3.jpg" alt="photo of hotel 3" class="gallery__photo">
+                        </figure>
+                    </div>
+
+                    <div class="overview">
+                        <h1 class="overview__heading">
+                            Las Meurice
+                        </h1>
+                        <div class="overview__stars">
+                            <svg class="overview__icon-star">
+                                <use xlink:href='img/sprite.svg#icon-star'></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href='img/sprite.svg#icon-star'></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href='img/sprite.svg#icon-star'></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href='img/sprite.svg#icon-star'></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href='img/sprite.svg#icon-star'></use>
+                            </svg>
+                        </div>
+                        <div class="overview__location">
+                            <svg class="overview__icon-location">
+                                <use xlink:href='img/sprite.svg#icon-location-pin'></use>
+                            </svg>
+                            <button class="btn-inline">Paris, France</button>
+                        </div>
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">8.6</div>
+                            <div class="overview__rating-count">369 votes</div>
+                        </div>
+                    </div>
+
+                    <div class="details">
+                        <div class="description">
+                            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis ratione sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate.</p>
+                            <p class="paragraph">Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.</p>
+                            <ul class="list">
+                                <li class="list__item">Close to the beach</li>
+                                <li class="list__item">Breakfast included</li>
+                                <li class="list__item">Free airport shuttle</li>
+                                <li class="list__item">Free wifi inall rooms</li>
+                                <li class="list__item">Air-conditioning & heating</li>
+                                <li class="list__item">Pets allowed</li>
+                                <li class="list__item">We speak all languages</li>
+                                <li class="list__item">Perfect for families</li>
+                            </ul>
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Lucy and 3 other friends recommend this hotel.
+                                </p>
+                                <div class="recommend__friends">
+                                    <img src="img/user-6.jpg" alt="friend 1" class="recommend__photo">
+                                    <img src="img/user-3.jpg" alt="friend 2" class="recommend__photo">
+                                    <img src="img/user-4.jpg" alt="friend 3" class="recommend__photo">
+                                    <img src="img/user-5.jpg" alt="friend 4" class="recommend__photo">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="user-review">
+                            User reviews
+                        </div>
+                    </div>
                 </main>
             </div>
 
