--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                     Lucy and 3 other friends recommend this hotel.
                                 </p>
                                 <div class="recommend__friends">
-                                    <img src="img/user-6.jpg" alt="friend 1" class="recommend__photo">
+                                    <img src="img/user-2.jpg" alt="friend 1" class="recommend__photo">
                                     <img src="img/user-3.jpg" alt="friend 2" class="recommend__photo">
                                     <img src="img/user-4.jpg" alt="friend 3" class="recommend__photo">
                                     <img src="img/user-5.jpg" alt="friend 4" class="recommend__photo">
@@ -167,7 +167,32 @@
                             </div>
                         </div>
                         <div class="user-review">
-                            User reviews
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi, totam, itaque officia ex.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-6.jpg" alt="user 3" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Haley Turner</p>
+                                        <p class="review__user-date">Feb 23rd, 2019</p>
+                                    </div>
+                                    <div class="review__user-rating">8.9</div>
+                                </figcaption>
+                            </figure>
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="user 1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Steve Rogers</p>
+                                        <p class="review__user-date">Sep 16th, 2017</p>
+                                    </div>
+                                    <div class="review__user-rating">8.3</div>
+                                </figcaption>
+                            </figure>
                         </div>
                     </div>
                 </main>
