--- a/index.html
+++ b/index.html
@@ -193,7 +193,19 @@
                                     <div class="review__user-rating">8.3</div>
                                 </figcaption>
                             </figure>
+                            
+                            <button class="btn-inline">Show all <span class="">&rarr;</span></button>
                         </div>
+                    </div>
+
+                    <div class="cta">
+                        <h2 class="cta__text">
+                            GOOD NEWS! WE HAVE 4 FREE ROOMS FOR YOUR SELECTED DATES!
+                        </h2>
+                        <button class="cta__btn">
+                            <span class="cta__btn--visible">Book now</span>
+                            <span class="cta__btn--invisible">Only 4 rooms left</span>
+                        </button>
                     </div>
                 </main>
             </div>
