--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                     <div class="overview">
                         <h1 class="overview__heading">
-                            Las Meurice
+                            Las Meurice Hotel
                         </h1>
                         <div class="overview__stars">
                             <svg class="overview__icon-star">
