--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="user-nav__notifications">13</span>
                     </div>
                     <div class="user-nav__user">
-                        <img class='user-nav__user-photo' src="img/user.jpg" alt="user photo">
+                        <img class='user-nav__user-photo' src="img/user.JPG" alt="user photo">
                         <span class="user-nav__username">Jay</span>
                     </div>
                 </nav>
