complete hover menues

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         
                         <div class="user-nav_chat">
                             <h2 class="user-nav_chat_head">Bookmarks</h2>
-                            <div class="user-nav_chat_item">
+                            <div class="user-nav_chat_item user-nav_chat_item--highlighted">
                                 <img src="img/user-1.jpg" alt="Hotel Las Palmas Photo" class="user-nav_chat_photo">
                                 <div class="user-nav_chat_info-box">
                                     <p class="user-nav_chat_name">Mike Waltz</p>
@@ -228,7 +228,7 @@
 
                         <div class="user-nav_chat">
                             <h2 class="user-nav_chat_head">Messages</h2>
-                            <div class="user-nav_chat_item">
+                            <div class="user-nav_chat_item user-nav_chat_item--highlighted">
                                 <img src="img/user-1.jpg" alt="Hotel Las Palmas Photo" class="user-nav_chat_photo">
                                 <div class="user-nav_chat_info-box">
                                     <p class="user-nav_chat_name">Mike Waltz</p>
@@ -239,7 +239,7 @@
                                     <p class="user-nav_chat_date">Oct 8, 2018</p>
                                 </div>
                             </div>
-                            <div class="user-nav_chat_item">
+                            <div class="user-nav_chat_item user-nav_chat_item--highlighted">
                                 <img src="img/user-2.jpg" alt="Hotel Las Palmas Photo" class="user-nav_chat_photo">
                                 <div class="user-nav_chat_info-box">
                                     <p class="user-nav_chat_name">Jessica Natou</p>
@@ -261,6 +261,39 @@
                                     <p class="user-nav_chat_date">Sept 14, 2018</p>
                                 </div>
                             </div>
+                            <div class="user-nav_chat_item">
+                                <img src="img/user-5.jpg" alt="Hotel Las Palmas Photo" class="user-nav_chat_photo">
+                                <div class="user-nav_chat_info-box">
+                                    <p class="user-nav_chat_name">John Briefcase</p>
+                                    <p class="user-nav_chat_preview">Lorem ipsum dolor sit amet ...</p>
+                                </div>
+                                <div class="user-nav_chat_timestamp">
+                                    <div class="user-nav_chat_time">2:36pm</div>
+                                    <p class="user-nav_chat_date">Sept 14, 2018</p>
+                                </div>
+                            </div>
+                            <div class="user-nav_chat_item">
+                                <img src="img/user-6.jpg" alt="Hotel Las Palmas Photo" class="user-nav_chat_photo">
+                                <div class="user-nav_chat_info-box">
+                                    <p class="user-nav_chat_name">John Briefcase</p>
+                                    <p class="user-nav_chat_preview">Lorem ipsum dolor sit amet ...</p>
+                                </div>
+                                <div class="user-nav_chat_timestamp">
+                                    <div class="user-nav_chat_time">2:36pm</div>
+                                    <p class="user-nav_chat_date">Sept 14, 2018</p>
+                                </div>
+                            </div>
+                            <div class="user-nav_chat_item">
+                                <img src="img/user-4.jpg" alt="Hotel Las Palmas Photo" class="user-nav_chat_photo">
+                                <div class="user-nav_chat_info-box">
+                                    <p class="user-nav_chat_name">John Briefcase</p>
+                                    <p class="user-nav_chat_preview">Lorem ipsum dolor sit amet ...</p>
+                                </div>
+                                <div class="user-nav_chat_timestamp">
+                                    <div class="user-nav_chat_time">2:36pm</div>
+                                    <p class="user-nav_chat_date">Sept 14, 2018</p>
+                                </div>
+                            </div>
                         </div>
 
 
@@ -272,13 +305,12 @@
                         <span class="user-nav__username">Jay</span>
 
                         <div class="user-nav_profile">
-                            <h2 class="user-nav_profile_header">Profile</h2>
                             <div class="user-nav_profile_item-box">
                                 
                                 <div class="user-nav_profile_item">
                                     <a href="#" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
-                                            <use xlink:href="img/sprite.svg#icon-user"></use>
+                                            <use xlink:href="img/sprite.svg#icon-github"></use>
                                             <span class="profile_name">Account</span>
                                         </svg>
                                     </a>
@@ -286,7 +318,7 @@
                                 <div class="user-nav_profile_item">
                                     <a href="#" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
-                                            <use xlink:href="img/sprite.svg#icon-bell"></use>
+                                            <use xlink:href="img/sprite.svg#icon-book"></use>
                                             <span class="profile_name">My Bookings</span>
                                         </svg>
                                     </a>
@@ -294,7 +326,15 @@
                                 <div class="user-nav_profile_item">
                                     <a href="#" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
-                                            <use xlink:href="img/sprite.svg#icon-credit-card"></use>
+                                            <use xlink:href="img/sprite.svg#icon-heart"></use>
+                                            <span class="profile_name">My Reviews</span>
+                                        </svg>
+                                    </a>
+                                </div>
+                                <div class="user-nav_profile_item">
+                                    <a href="#" class="user-nav_profile_link">
+                                        <svg class="user-nav_profile_icon">
+                                            <use xlink:href="img/sprite.svg#icon-users"></use>
                                             <span class="profile_name">Connections</span>
                                         </svg>
                                     </a>
@@ -302,7 +342,7 @@
                                 <div class="user-nav_profile_item">
                                     <a href="#" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
-                                            <use xlink:href="img/sprite.svg#icon-log-out"></use>
+                                            <use xlink:href="img/sprite.svg#icon-cog"></use>
                                             <span class="profile_name">Settings</span>
                                         </svg>
                                     </a>
@@ -310,16 +350,8 @@
                                 <div class="user-nav_profile_item">
                                     <a href="#" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
-                                            <use xlink:href="img/sprite.svg#icon-log-out"></use>
+                                            <use xlink:href="img/sprite.svg#icon-mail"></use>
                                             <span class="profile_name">Support</span>
-                                        </svg>
-                                    </a>
-                                </div>
-                                <div class="user-nav_profile_item">
-                                    <a href="#" class="user-nav_profile_link">
-                                        <svg class="user-nav_profile_icon">
-                                            <use xlink:href="img/sprite.svg#icon-log-out"></use>
-                                            <span class="profile_name">My Reviews</span>
                                         </svg>
                                     </a>
                                 </div>
