--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                             <div class="user-nav_profile_item-box">
                                 
                                 <div class="user-nav_profile_item">
-                                    <a href="https://github.com/jayli3/trillo-front-end" target="_blank" class="user-nav_profile_link">
+                                    <a href="https://github.com/jayli3n/trillo-front-end" target="_blank" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
                                             <use xlink:href="img/sprite.svg#icon-github"></use>
                                             <span class="profile_name">Account</span>
@@ -316,7 +316,7 @@
                                     </a>
                                 </div>
                                 <div class="user-nav_profile_item">
-                                    <a href="https://github.com/jayli3/trillo-front-end" target="_blank" class="user-nav_profile_link">
+                                    <a href="https://github.com/jayli3n/trillo-front-end" target="_blank" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
                                             <use xlink:href="img/sprite.svg#icon-book"></use>
                                             <span class="profile_name">My Bookings</span>
@@ -324,7 +324,7 @@
                                     </a>
                                 </div>
                                 <div class="user-nav_profile_item">
-                                    <a href="https://github.com/jayli3/trillo-front-end" target="_blank" class="user-nav_profile_link">
+                                    <a href="https://github.com/jayli3n/trillo-front-end" target="_blank" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
                                             <use xlink:href="img/sprite.svg#icon-heart"></use>
                                             <span class="profile_name">My Reviews</span>
@@ -332,7 +332,7 @@
                                     </a>
                                 </div>
                                 <div class="user-nav_profile_item">
-                                    <a href="https://github.com/jayli3/trillo-front-end" target="_blank" class="user-nav_profile_link">
+                                    <a href="https://github.com/jayli3n/trillo-front-end" target="_blank" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
                                             <use xlink:href="img/sprite.svg#icon-users"></use>
                                             <span class="profile_name">Connections</span>
@@ -340,7 +340,7 @@
                                     </a>
                                 </div>
                                 <div class="user-nav_profile_item">
-                                    <a href="https://github.com/jayli3/trillo-front-end" target="_blank" class="user-nav_profile_link">
+                                    <a href="https://github.com/jayli3n/trillo-front-end" target="_blank" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
                                             <use xlink:href="img/sprite.svg#icon-cog"></use>
                                             <span class="profile_name">Settings</span>
@@ -348,7 +348,7 @@
                                     </a>
                                 </div>
                                 <div class="user-nav_profile_item">
-                                    <a href="https://github.com/jayli3/trillo-front-end" target="_blank" class="user-nav_profile_link">
+                                    <a href="https://github.com/jayli3n/trillo-front-end" target="_blank" class="user-nav_profile_link">
                                         <svg class="user-nav_profile_icon">
                                             <use xlink:href="img/sprite.svg#icon-mail"></use>
                                             <span class="profile_name">Support</span>
@@ -402,7 +402,7 @@
                     </ul>
 
                     <div class="legal">
-                        &copy; 2019 by <a href="https://github.com/jayli3" class="jayli3">Jay Li</a>. View source code on my <a href="https://github.com/jayli3/trillo-front-end" class="jayli3">GitHub</a> page.
+                        &copy; 2019 by <a href="https://github.com/jayli3n" class="jayli3n">Jay Li</a>. View source code on my <a href="https://github.com/jayli3n/trillo-front-end" class="jayli3n">GitHub</a> page.
                     </div>
                 </nav>
 
